[metadata]
name = svg_plot
version = 0.1.0
author = Terry Greeniaus
author_email = terrygreeniaus@gmail.com
description = Lightweight tool to generate SVG plots.
long_description = file: README.rst
long_description_content_type = text/x-rst
keywords = svg plot
url = https://github.com/tgree/svg_plot
license = License :: OSI Approved :: MIT License
classifiers =
    Operating System :: POSIX
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License

[options]
python_requires = >=3.6
packages = svg_plot
